@@ -14,6 +14,9 @@ Noteworthy changes in version 1.24.0 (unrelease)
  * cpp: Provide information about designated revocation keys for a Key.
    [T7118]
 
+ * cpp: Add safer member function returning text describing an error.
+   [T5960]
+
  * qt: Install headers for Qt 5 and Qt 6 in separate folders.  [T7161]
 
  * qt: Allow reading the data to decrypt/encrypt/sign/verify directly from
@@ -39,6 +42,7 @@ Noteworthy changes in version 1.24.0 (unrelease)
  cpp: Key::revocationKey                 NEW.
  cpp: Key::numRevocationKeys             NEW.
  cpp: Key::revocationKeys                NEW.
+ cpp: Error::asStdString                 NEW.
  qt: DecryptVerifyJob::setInputFile      NEW.
  qt: DecryptVerifyJob::inputFile         NEW.
  qt: DecryptVerifyJob::setOutputFile     NEW.
